# DatalogManager

./: CMakeLists.txt  ak10_9_calibration.cpp  datalog.cpp  main.cpp
Inc/: ak10_9_calibration.hpp  communication_embedded_system.hpp  datalog.hpp  main.hpp
Src/: communication_embedded_system.cpp  main.cpp
